final touches to cv

--- a/cv.tex
+++ b/cv.tex
@@ -50,10 +50,6 @@
 
 \makecvtitle % Print the CV title
 
-%----------------------------------------------------------------------------------------
-%   EDUCATION SECTION
-%----------------------------------------------------------------------------------------
-
 \section{Education}
 \cvitem{2012--present}{\textbf{PhD candidate Geophysics (certificate in Computational Engineering)}
                        \newline \textit{University of Michigan}, Ann Arbor}
@@ -69,10 +65,9 @@ lower crust and upper mantle}
 \cvitem{Description}{In this dissertation I introduce novel techniques to identify and model transient ground deformation resulting from earthquakes.  My work further constrains the physical properties of the crust and upper mantle, which are key pieces of information needed to improve assessments of seismic hazard.}
 
 \section{Publications}
-\cvitem{in prep.}{Hines, T. T., and E. A. Hetland. Detecting spatially and temporally correlated signals in geodetic data with the radial basis function finite-difference method}
+\cvitem{in progress}{Hines, T. T., and E. A. Hetland. Detecting spatially and temporally correlated signals in geodetic data with the radial basis function finite-difference method}
 
-\cvitem{2016}{Hines, T. T., and E. A. Hetland. Rheologic constraints on the upper mantle from five years of postseismic deformation following the El Mayor-Cucapah earthquake. \textit{J. Geophys. Res.}, 204, doi: 10.1002/2016JB013114}
-
+\cvitem{2016}{Hines, T. T., and E. A. Hetland. Rheologic constraints on the upper mantle from five years of postseismic deformation following the El Mayor-Cucapah earthquake. \textit{J. Geophys. Res.}, 121, doi: 10.1002/2016JB013114}
 \cvitem{2016}{Hines, T. T., and E. A. Hetland. Rapid and simultaneous estimation of fault slip and heterogeneous lithospheric viscosity from post-seismic deformation. \textit{Geophys. J. Int.}, 204, doi: 10.1093/gji/ggv477}
 
 \cvitem{2013}{Hines, T. T., and E. A. Hetland. Bias in estimates of lithosphere viscosity from interseismic deformation. \textit{Geophys. Res. Lett.}, 40, doi:10.1002/grl.50839}
@@ -100,7 +95,7 @@ lower crust and upper mantle}
 \cvitem{2014}{\textbf{CIG Crustal Deformation Modeling Workshop}, \textit{Stanford University}
               \newline One week course on using Pylith, a finite element program for modeling lithosphere dynamics}
               
-\cvitem{2014}{\textbf{InSAR: An introduction to ISCE and GIAnT}, \textit{UNAVCO}
+\cvitem{2014}{\textbf{InSAR: An Introduction to ISCE and GIAnT}, \textit{UNAVCO}
               \newline Three day course on processing Interferometric Synthetic Aperture Radar (InSAR) data}
               
 \cvitem{2012}{\textbf{Wasatch-Uinta Summer Field Camp}, \textit{University of Illinois}
