--- a/cv.tex
+++ b/cv.tex
@@ -75,7 +75,7 @@ lower crust and upper mantle}
 \section{Research Positions}
 \cvitem{2012--present}{\textbf{Graduate student research assistant}, \textit{University of Michigan}}
 
-\cvitem{2012}{\textbf{Ecological modeling intern}, \textit{Smithsonian Environmental Research Center}}
+\cvitem{2011}{\textbf{Ecological modeling intern}, \textit{Smithsonian Environmental Research Center}}
 
 \cvitem{2010-2011}{\textbf{Crop science research assistant}, \textit{University of Illinois}}
 
@@ -84,7 +84,7 @@ lower crust and upper mantle}
                        \newline Taught labs for EARTH 468, Data Analysis and Model Estimation}
         
 \cvitem{2015}{\textbf{Michigan Math and Science Scholars instructor}, \textit{University of Michigan}
-               \newline Co-taught a summer course for High School students on the mathematics of natural hazard}
+               \newline Co-taught a summer course for high school students on the mathematics of natural hazard}
 \newpage
 \section{Honors}
 \cvitem{2015}{\textbf{Best Graduate Student Instructor Award}, \textit{University of Michigan}}
@@ -109,7 +109,7 @@ lower crust and upper mantle}
 
 \cvitem{2015}{Hines, T. T. and E. A. Hetland (invited speaker). Kalman filter based estimation of lithospheric viscosity and fault slip from postseismic deformation: application to the 2010 El Mayor-Cucapah earthquake. American Geophysical Union 2015 Fall Meeting, San Francisco, CA.}
 
-\cvitem{2015}{Hines, T. T. and E. A. Hetland. Inversion of postseismic deformation for lithospheric viscosity and fault slip. Society for Industrial and Applied Mathematics: Geosciences 2015 meeting, Stanford CA.}
+\cvitem{2015}{Hines, T. T. and E. A. Hetland. Inversion of postseismic deformation for lithospheric viscosity and fault slip. Society for Industrial and Applied Mathematics: Geosciences 2015 Meeting, Stanford CA.}
 
 \cvitem{2014}{Hines, T. T. and E. A. Hetland. Direct inversion of postseismic deformation for lithospheric viscosity structure and fault slip. American Geophysical Union 2014 Fall Meeting, San Francisco, CA.}
 
@@ -117,7 +117,7 @@ lower crust and upper mantle}
 
 \cvitem{2013}{Hines, T. T. and E. A. Hetland. Bias in estimates of lithosphere viscosity from interseismic deformation. American Geophysical Union 2013 Fall Meeting, San Francisco, CA.}
 
-\cvitem{2013}{Hetland, E. A., G. Zhang, T. T. Hines. Post- and interseismic deformation due to both localized and distributed creep at depth. American Geophysical Union 2013 Fall Meeting, San Fancisco, CA.}
+\cvitem{2013}{Hetland, E. A., G. Zhang, and T. T. Hines. Post- and interseismic deformation due to both localized and distributed creep at depth. American Geophysical Union 2013 Fall Meeting, San Fancisco, CA.}
 
 \cvitem{2013}{Hines, T. T. and E. A. Hetland. Evaluating geodetic constraints on the strength of the lithosphere. Michigan Geophysical Union, Ann Arbor, MI.}
 
