--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -57,20 +57,19 @@
 \cvitem{2008-2012}{\textbf{BS Geology}, \textit{University of Illinois}, Urbana-Champaign}
 
 \section{Doctoral Dissertation}
-\cvitem{Title}{Postseismic and interseismic signature of viscoelasticity in the
-lower crust and upper mantle}
+\cvitem{Title}{Transient deformation in tectonically active regions and implications for viscoelasticity in the crust and upper mantle}
 
 \cvitem{Advisor}{Eric Hetland}
 
 \cvitem{Description}{In this dissertation I introduce novel techniques to identify and model transient ground deformation resulting from earthquakes.  My work further constrains the physical properties of the crust and upper mantle, which are key pieces of information needed to improve assessments of seismic hazard.}
 
 \section{Publications}
-\cvitem{in progress}{Hines, T. T., and E. A. Hetland. Detecting spatially and temporally correlated signals in geodetic data with the radial basis function finite-difference method}
+\cvitem{in progress}{Hines, T. T. and E. A. Hetland. Detecting spatially and temporally correlated signals in geodetic data with the radial basis function finite-difference method}
 
-\cvitem{2016}{Hines, T. T., and E. A. Hetland. Rheologic constraints on the upper mantle from five years of postseismic deformation following the El Mayor-Cucapah earthquake. \textit{J. Geophys. Res.}, 121, doi: 10.1002/2016JB013114}
-\cvitem{2016}{Hines, T. T., and E. A. Hetland. Rapid and simultaneous estimation of fault slip and heterogeneous lithospheric viscosity from post-seismic deformation. \textit{Geophys. J. Int.}, 204, doi: 10.1093/gji/ggv477}
+\cvitem{2016}{Hines, T. T. and E. A. Hetland. Rheologic constraints on the upper mantle from five years of postseismic deformation following the El Mayor-Cucapah earthquake. \textit{J. Geophys. Res.}, 121, doi: 10.1002/2016JB013114}
+\cvitem{2016}{Hines, T. T. and E. A. Hetland. Rapid and simultaneous estimation of fault slip and heterogeneous lithospheric viscosity from post-seismic deformation. \textit{Geophys. J. Int.}, 204, doi: 10.1093/gji/ggv477}
 
-\cvitem{2013}{Hines, T. T., and E. A. Hetland. Bias in estimates of lithosphere viscosity from interseismic deformation. \textit{Geophys. Res. Lett.}, 40, doi:10.1002/grl.50839}
+\cvitem{2013}{Hines, T. T. and E. A. Hetland. Bias in estimates of lithosphere viscosity from interseismic deformation. \textit{Geophys. Res. Lett.}, 40, doi:10.1002/grl.50839}
 
 \section{Research Positions}
 \cvitem{2012--present}{\textbf{Graduate student research assistant}, \textit{University of Michigan}}
@@ -105,6 +104,8 @@ lower crust and upper mantle}
               \newline Two week course studying the evolution of a sedimentary basin in Ireland}
 
 \section{Abstracts}
+\cvitem{2016}{Hines, T. T. and E. A. Hetland. Extracting transient strain from GPS: a novel application of the radial basis function-finite dfference method. American Geophysical Union 2016 Fall Meeting, San Francisco, CA.}
+
 \cvitem{2016}{E. A. Hetland, L. M. Luna, R. H. Styron, and T. T. Hines. Inference of stress from faulting and topographic loading on faults. Seismological Society of America 2016 Annual Meeting, Reno, NV.}
 
 \cvitem{2015}{Hines, T. T. and E. A. Hetland (invited speaker). Kalman filter based estimation of lithospheric viscosity and fault slip from postseismic deformation: application to the 2010 El Mayor-Cucapah earthquake. American Geophysical Union 2015 Fall Meeting, San Francisco, CA.}
@@ -121,6 +122,7 @@ lower crust and upper mantle}
 
 \cvitem{2013}{Hines, T. T. and E. A. Hetland. Evaluating geodetic constraints on the strength of the lithosphere. Michigan Geophysical Union, Ann Arbor, MI.}
 
+\newpage
 \section{Membership}
 \cvitem{since 2013}{Seismological Society of America}
 \cvitem{since 2013}{American Geophysical Union}
