--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -57,7 +57,7 @@
 \cvitem{2008-2012}{\textbf{BS Geology}, \textit{University of Illinois}, Urbana-Champaign}
 
 \section{Doctoral Dissertation}
-\cvitem{Title}{Transient deformation in tectonically active regions and implications for viscoelasticity in the crust and upper mantle}
+\cvitem{Title}{Transient ground deformation in tectonically active regions and implications for the mechanical behavior of the crust and upper mantle}
 
 \cvitem{Advisor}{Eric Hetland}
 
