--- a/resumes/isciences/coverletter.tex
+++ b/resumes/isciences/coverletter.tex
@@ -21,14 +21,14 @@
 \begin{document}
 %-----       letter       ---------------------------------------------------------
 % recipient data
-\recipient{Aquasight}{1650 West Big Beaver Road, Suite 101\\Troy, MI 48084}
-\date{November 28, 2016}
+\recipient{ISciences, L.L.C.}{61 Main Street, Suite 200\newline Burlington, VT 05401}
+\date{April 14, 2017}
 \opening{Dear Sir or Madam,}
 \closing{Sincerely,}
 \enclosure[Attached]{Resum\'e}
 \makelettertitle
 
-I am a PhD student in Geophysics at the University of Michigan, Ann Arbor, and I anticipate graduating in April 2017.  Throughout my five years as a graduate student, I have developed skills and experience in data analysis that would make me a valuable asset to Aquasight. As requested in the position posting, I have a deep theoretical and practical understanding of supervised machine learning. I also have years of experience with Kalman filtering, which can be used to convert raw data streams into accurate, real-time intelligence.  While I have the requisite experience, I am also eager to learn and keep up to date with the latest techniques in data analysis. I believe this passion for learning will make me well suited for the energetic start-up environment at Aquasight. Thank you for your consideration, and I look forward to your response.
+I am applying for the research scientist position at ISciences. I am a PhD student in Geophysics at the University of Michigan, Ann Arbor, and I anticipate graduating in August 2017. My research involves analyzing geospatial data to try to better understand processes related to plate tectonics. For example, I have used Interferometric Synthetic Aperture Radar (InSAR) to analyze how the ground deforms after earthquakes. Throughout my five years as a graduate student, I have developed a set a skills and techniques for geospatial data analysis.  I believe that these skills will make me a valuable asset to ISciences. I have attached my resum\'e and I look forward to your response.
 
 \makeletterclosing
 
