--- a/resumes/isciences/resume.tex
+++ b/resumes/isciences/resume.tex
@@ -52,7 +52,7 @@
 % Radial Basis functions and stochastic modeling, for flexible nonparametric modeling 
 
 \section{Education}
-\cvitem{2012--present}{\textbf{PhD candidate Geophysics (certificate in Computational Engineering)}
+\cvitem{2012--present}{\textbf{PhD candidate Geophysics (certificate in Computational Engineering)},
                        \newline \textit{University of Michigan}, Ann Arbor, MI}
                        
 \cvitem{2008-2012}{\textbf{BS Geology}, \textit{University of Illinois}, Urbana-Champaign, IL}
