--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -64,7 +64,9 @@
 \cvitem{Description}{In this dissertation I introduce novel techniques to identify and model transient ground deformation resulting from earthquakes.  My work further constrains the physical properties of the crust and upper mantle, which are key pieces of information needed to improve assessments of seismic hazard.}
 
 \section{Publications}
-\cvitem{in progress}{Hines, T. T. and E. A. Hetland. Detecting spatially and temporally correlated signals in geodetic data with the radial basis function finite-difference method}
+\cvitem{2017}{Hines, T. T., and E. A. Hetland. Revealing transient strain in geodetic data with Gaussian process regression. \textit{in preparation}}
+
+\cvitem{2017}{Hines, T. T., and E. A. Hetland. Unbiased characterization of noise in geodetic data. \textit{submitted to J. Geod.}}
 
 \cvitem{2016}{Hines, T. T. and E. A. Hetland. Rheologic constraints on the upper mantle from five years of postseismic deformation following the El Mayor-Cucapah earthquake. \textit{J. Geophys. Res.}, 121, doi: 10.1002/2016JB013114}
 \cvitem{2016}{Hines, T. T. and E. A. Hetland. Rapid and simultaneous estimation of fault slip and heterogeneous lithospheric viscosity from post-seismic deformation. \textit{Geophys. J. Int.}, 204, doi: 10.1093/gji/ggv477}
@@ -76,10 +78,8 @@
 
 \cvitem{2011}{\textbf{Ecological modeling intern}, \textit{Smithsonian Environmental Research Center}}
 
-\cvitem{2010-2011}{\textbf{Crop science research assistant}, \textit{University of Illinois}}
-
 \section{Teaching Experience}
-\cvitem{2014--present}{\textbf{Graduate student instructor}, \textit{University of Michigan}
+\cvitem{2014--2016}{\textbf{Graduate student instructor}, \textit{University of Michigan}
                        \newline Taught labs for EARTH 468, Data Analysis and Model Estimation}
         
 \cvitem{2015}{\textbf{Michigan Math and Science Scholars instructor}, \textit{University of Michigan}
