--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -104,7 +104,7 @@
               \newline Two week course studying the evolution of a sedimentary basin in Ireland}
 
 \section{Abstracts}
-\cvitem{2016}{Hines, T. T. and E. A. Hetland. Extracting transient strain from GPS: a novel application of the radial basis function-finite dfference method. American Geophysical Union 2016 Fall Meeting, San Francisco, CA.}
+\cvitem{2016}{Hines, T. T. and E. A. Hetland. Extracting transient strain from GPS: a novel application of the radial basis function-finite difference method. American Geophysical Union 2016 Fall Meeting, San Francisco, CA.}
 
 \cvitem{2016}{E. A. Hetland, L. M. Luna, R. H. Styron, and T. T. Hines. Inference of stress from faulting and topographic loading on faults. Seismological Society of America 2016 Annual Meeting, Reno, NV.}
 
@@ -118,7 +118,7 @@
 
 \cvitem{2013}{Hines, T. T. and E. A. Hetland. Bias in estimates of lithosphere viscosity from interseismic deformation. American Geophysical Union 2013 Fall Meeting, San Francisco, CA.}
 
-\cvitem{2013}{Hetland, E. A., G. Zhang, and T. T. Hines. Post- and interseismic deformation due to both localized and distributed creep at depth. American Geophysical Union 2013 Fall Meeting, San Fancisco, CA.}
+\cvitem{2013}{Hetland, E. A., G. Zhang, and T. T. Hines. Post- and interseismic deformation due to both localized and distributed creep at depth. American Geophysical Union 2013 Fall Meeting, San Francisco, CA.}
 
 \cvitem{2013}{Hines, T. T. and E. A. Hetland. Evaluating geodetic constraints on the strength of the lithosphere. Michigan Geophysical Union, Ann Arbor, MI.}
 
