--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -86,6 +86,7 @@
                \newline Co-taught a summer course for high school students on the mathematics of natural hazard}
 \newpage
 \section{Honors}
+\cvitem{2017}{\textbf{Rackham Predoctoral Fellowship}, \textit{University of Michigan}}
 \cvitem{2015}{\textbf{Best Graduate Student Instructor Award}, \textit{University of Michigan}}
 
 \cvitem{2012}{\textbf{Outstanding Senior Award}, \textit{University of Illinois}}
