--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -51,7 +51,7 @@
 \makecvtitle % Print the CV title
 
 \section{Education}
-\cvitem{2012--present}{\textbf{PhD candidate Geophysics (certificate in Computational Engineering)}
+\cvitem{2012--2017}{\textbf{PhD Geophysics (certificate in Computational Engineering)}
                        \newline \textit{University of Michigan}, Ann Arbor}
                        
 \cvitem{2008-2012}{\textbf{BS Geology}, \textit{University of Illinois}, Urbana-Champaign}
@@ -64,17 +64,16 @@
 \cvitem{Description}{In this dissertation I introduce novel techniques to identify and model transient ground deformation resulting from earthquakes.  My work further constrains the physical properties of the crust and upper mantle, which are key pieces of information needed to improve assessments of seismic hazard.}
 
 \section{Publications}
-\cvitem{2017}{Hines, T. T., and E. A. Hetland. Revealing transient strain in geodetic data with Gaussian process regression. \textit{submitted to Geophys. J. Int.}}
-
-\cvitem{2017}{Hines, T. T., and E. A. Hetland. Unbiased characterization of noise in geodetic data. \textit{submitted to J. Geod.}}
+\cvitem{2017}{Hines, T. T., and E. A. Hetland. Revealing transient strain in geodetic data with Gaussian process regression. \textit{Geophys. J. Int.}, 212, doi: 10.1093/gji/ggx525}
 
 \cvitem{2016}{Hines, T. T. and E. A. Hetland. Rheologic constraints on the upper mantle from five years of postseismic deformation following the El Mayor-Cucapah earthquake. \textit{J. Geophys. Res.}, 121, doi: 10.1002/2016JB013114}
-\cvitem{2016}{Hines, T. T. and E. A. Hetland. Rapid and simultaneous estimation of fault slip and heterogeneous lithospheric viscosity from post-seismic deformation. \textit{Geophys. J. Int.}, 204, doi: 10.1093/gji/ggv477}
 
-\cvitem{2013}{Hines, T. T. and E. A. Hetland. Bias in estimates of lithosphere viscosity from interseismic deformation. \textit{Geophys. Res. Lett.}, 40, doi:10.1002/grl.50839}
+\cvitem{2015}{Hines, T. T. and E. A. Hetland. Rapid and simultaneous estimation of fault slip and heterogeneous lithospheric viscosity from post-seismic deformation. \textit{Geophys. J. Int.}, 204, doi: 10.1093/gji/ggv477}
+
+\cvitem{2013}{Hines, T. T. and E. A. Hetland. Bias in estimates of lithosphere viscosity from interseismic deformation. \textit{Geophys. Res. Lett.}, 40, doi: 10.1002/grl.50839}
 
 \section{Research Positions}
-\cvitem{2012--present}{\textbf{Graduate student research assistant}, \textit{University of Michigan}}
+\cvitem{2012--2017}{\textbf{Graduate student research assistant}, \textit{University of Michigan}}
 
 \cvitem{2011}{\textbf{Ecological modeling intern}, \textit{Smithsonian Environmental Research Center}}
 
