--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -73,9 +73,11 @@
 \cvitem{2013}{Hines, T. T. and E. A. Hetland. Bias in estimates of lithosphere viscosity from interseismic deformation. \textit{Geophys. Res. Lett.}, 40, doi: 10.1002/grl.50839}
 
 \section{Research Positions}
-\cvitem{2012--2017}{\textbf{Graduate student research assistant}, \textit{University of Michigan}}
+\cvitem{2017--present}{\textbf{Machine Learning Scientist}, \textit{Radiant Solutions}, Ypsilanti, MI}
 
-\cvitem{2011}{\textbf{Ecological modeling intern}, \textit{Smithsonian Environmental Research Center}}
+\cvitem{2012--2017}{\textbf{Graduate Student Research Assistant}, \textit{University of Michigan}, Ann Arbor, MI}
+
+\cvitem{2011}{\textbf{Ecological Modeling Intern}, \textit{Smithsonian Institution}, Edgewater, MD}
 
 \section{Teaching Experience}
 \cvitem{2014--2016}{\textbf{Graduate student instructor}, \textit{University of Michigan}
